# fips

./: README.md
executable/fips/: trained_svm.yml
executable/fips/play_Data/: PlayerConnectionConfigFile  output_log.txt
executable/stabilized/play_Data/: mainData  output_log.txt
source/: README.txt
source/CPP/: CMakeLists.txt
source/CPP/fips/: EmotionClassifier.h  FaceShape.h  Stabilisator.h  plugin.cpp
source/CPP/src/exe/: face_tracker.cc
source/Unity/: Assembly-CSharp.csproj  RiggedHeadV4-csharp.sln  RiggedHeadV4.sln  RiggedHeadV4.userprefs  trained_svm.yml  trained_svm_v1.yml
source/Unity/Assets/: main.unity
source/Unity/Assets/Background/Materials/: 6774039-beach-wallpaper.mat
source/Unity/Assets/Controller/: BonesHandler.cs  FaceShape.cs  FaceTrackerPlugin.cs
source/Unity/Assets/Controller/Emotions/: EmotionHelper.cs
source/Unity/Assets/Controller/FaceClasses/: Chin.cs  Eye.cs  EyeBrow.cs  EyeLid.cs  Face.cs  Jaw.cs  Mouth.cs  MouthCorner.cs  Nose.cs  NoseWing.cs  Organ.cs
source/Unity/Assets/Materials/: 03 - Default.mat  Material #1.mat  Ogre_Body.mat  Ogre_EyeLens.mat  Ogre_Teeth.mat  Ogre_gums.mat  Ogre_tounge.mat  cornea.mat  diffuse.mat  eyewhite.mat  iris.mat  pupil.mat
source/Unity/Assets/Model/Torso/: slykdrako_character03_withtextures.blend
source/Unity/Assets/Model/Torso/Materials/: body.mat  boxers.mat  ground.mat  shirt_normals.mat
source/Unity/Assets/Model/holmen_new/: holmen face rig.blend
